# dagster-dbt-demo

./: .gitignore  README-dev.md  README.md  docker-compose-example.yaml  docker-run.sh  pyproject.toml  run.sh
dagster_example/: __init__.py
dagsterproject/: __init__.py
docker-env/: Dockerfile  start.py
warehouse/: dbt_project.yml
warehouse/config/: .gitignore  .user.yml
warehouse/macros/: generate_schema_name.sql
warehouse/models/dw/: dw_flattern_orders_with_user_profile.sql  dw_orders_with_user_profile.sql  dw_paid_orders.sql  dw_users.sql  order_with_user_profile.sql  paid_orders.sql  schema.yaml
warehouse/models/ods/: ods.yaml
warehouse/models/report/: daily_gmv.sql  gmv_by_category.sql  gmv_by_gender.sql  last_month_gmv.sql  report_revenue2024.sql  revenue2024.sql  schema.yaml
warehouse/scripts/: ods_init.sql  ods_orders.sql
warehouse/seeds/: goods.csv  seeds.yaml
warehouse/tests/generic/: between_and.sql
